src/log_fmt/snapshots/git_ai__log_fmt__authorship_log_serialization__tests__conversion_from_old_format.snap
---
source: src/log_fmt/authorship_log_2.rs
expression: new_log
---
AuthorshipLogV3 {
    attestations: [],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.0.0",
        base_commit_sha: "test-commit-sha",
        authors: {
            "author1": Author {
                username: "test_user",
                email: "test@example.com",
            },
        },
        prompts: {},
    },
}
