src/log_fmt/snapshots/git_ai__log_fmt__authorship_log_serialization__tests__expected_format.snap
---
source: src/log_fmt/authorship_log_2.rs
expression: serialized
---
"src/file.xyz\n  xyzAbc 1,2,19-222\n  123456 400-405\nsrc/file2.xyz\n  123456 1-111,245,260\n---\n{\n  \"schema_version\": \"authorship/3.0.0\",\n  \"base_commit_sha\": \"\",\n  \"authors\": {},\n  \"prompts\": {}\n}"
