src/log_fmt/snapshots/git_ai__log_fmt__authorship_log_serialization__tests__file_names_with_spaces.snap
---
source: src/log_fmt/authorship_log_serialization.rs
expression: serialized
---
"\"src/my file.rs\"\n  prompt_123 1-10\n\"docs/README (copy).md\"\n  prompt_123 5\ntest/file-with-dashes.js\n  prompt_123 20-25\n---\n{\n  \"schema_version\": \"authorship/3.0.0\",\n  \"base_commit_sha\": \"\",\n  \"prompts\": {\n    \"prompt_123\": {\n      \"agent_id\": {\n        \"tool\": \"cursor\",\n        \"id\": \"session_123\",\n        \"model\": \"claude-3-sonnet\"\n      },\n      \"human_author\": null,\n      \"messages\": []\n    }\n  }\n}"
